--- a/Metroid_1986/Metroid_1986.vcxproj.filters
+++ b/Metroid_1986/Metroid_1986.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="WaveBeam.cpp">
       <Filter>Object\Item</Filter>
     </ClCompile>
+    <ClCompile Include="Rocket.cpp">
+      <Filter>Object\Item</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneMenu.h">
@@ -297,6 +300,9 @@
       <Filter>Object\Item</Filter>
     </ClInclude>
     <ClInclude Include="WaveBeam.h">
+      <Filter>Object\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="Rocket.h">
       <Filter>Object\Item</Filter>
     </ClInclude>
   </ItemGroup>
