--- a/Metroid_1986/Metroid_1986.vcxproj
+++ b/Metroid_1986/Metroid_1986.vcxproj
@@ -113,7 +113,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="Scene.cpp" />
-    <ClCompile Include="SceneEnd.cpp" />
+    <ClCompile Include="SceneGameOver.cpp" />
     <ClCompile Include="SceneGame.cpp" />
     <ClCompile Include="SceneMain.cpp" />
     <ClCompile Include="SceneMenu.cpp" />
@@ -164,7 +164,7 @@
     <ClInclude Include="Zoomer.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="QuadTree.h" />
-    <ClInclude Include="SceneEnd.h" />
+    <ClInclude Include="SceneGameOver.h" />
     <ClInclude Include="SceneGame.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Scene.h" />
